--- a/docs/style.css
+++ b/docs/style.css
@@ -82,6 +82,10 @@ body {
    align-content: center;
    line-height: 1.62rem;
 
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+   text-rendering: optimizeLegibility;
+
    transition: background-color ease-in-out 1000ms, color ease-in-out 1000ms, background ease-in-out 1000ms;
 }
 
@@ -156,7 +160,7 @@ h1 {
    opacity: 0;
    position: absolute;
    font-weight: 200;
-   font-size: 4rem;
+   font-size: 2rem;
    line-height: auto;
    display: grid;
    justify-content: center;
@@ -170,13 +174,13 @@ h1 {
 }
 
 h2 {
-   font-size: 1.4rem;
+   font-size: 1.2rem;
    margin: 0;
    font-weight: 200;
 }
 
 h3 {
-   font-size: 1.4rem;
+   font-size: 1.1rem;
    font-weight: 200;
    margin: 0;
 }
