--- a/docs/style.css
+++ b/docs/style.css
@@ -81,71 +81,8 @@ a:hover {
   opacity: 1;
 }
 
-/* PARAGRAPH LINKS  */
-small > a,
-p > a {
-  position: relative;
-  text-shadow: 0 0.05rem 0.2rem rgba(var(--green), 0.88);
-}
-
-p > a:hover {
-  background: linear-gradient(
-    0deg,
-    transparent 14%,
-    rgba(var(--green), 0.44) 14%,
-    rgba(var(--green), 0.44) 20%,
-    transparent 20%
-  );
-}
-
-h3 > a:hover[target="_blank"] {
-  background: linear-gradient(
-    0deg,
-    transparent 14%,
-    rgba(var(--green), 0.44) 14%,
-    rgba(var(--green), 0.44) 20%,
-    transparent 20%
-  );
-}
-
-.external:hover button::after,
-.works-card > a:hover[target="_blank"] button::after,
-h3 > a:hover[target="_blank"]::after {
-  content: "->";
-  position: absolute;
-  text-align: center;
-  font-weight: 300;
-  font-size: 0.88rem;
-  font-family: var(--font-button);
-  letter-spacing: -1ch;
-  text-indent: -0.6ch;
-  line-height: 1.4ch;
-  /* left: -1rem;
-   bottom: 0.8rem; */
-  color: rgba(var(--color), 0.77);
-  background-color: rgba(var(--green), 0.55);
-
-  border-radius: 50%;
-  width: 0.66rem;
-  height: 0.66rem;
-  overflow: hidden;
-  transform: rotate(-44deg) translate(0rem, -0.15rem);
-  z-index: 20;
-  /* 
-   display: grid;
-   place-items: center;
-   place-content: center;    */
-}
-
-.external:hover button::after,
-.works-card > a:hover[target="_blank"] button::after {
-  transform: rotate(-44deg) translate(0.2rem, -0.15rem);
-  right: 0;
-}
-
 .external button:hover,
 .works-card > a:hover[target="_blank"] button:hover {
-  border: 0.5px solid rgba(var(--green), 1);
 }
 
 title {
@@ -192,18 +129,25 @@ h2 {
 }
 
 h3 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 200;
   margin: 0;
 }
 
-h4,
-h5,
-h6 {
-  font-size: 1.1rem;
+h4 {
+  font-size: 1rem;
   font-weight: 300;
   /* text-transform: uppercase; */
   margin: 0;
+}
+
+h5,
+h6 {
+  font-size: 0.66rem;
+  font-weight: 700;
+  /* text-transform: uppercase; */
+  margin: 0;
+  padding: 0;
 }
 
 /* buttons */
@@ -234,11 +178,11 @@ button {
 
   display: grid;
   align-content: center;
+  transition: border 0.3s ease, background-color 0.3s ease;
 }
 
 button:focus,
 button:hover {
-  border: 0.5px solid var(--color);
 }
 
 button a {
@@ -249,6 +193,92 @@ button a {
 button:active {
   background: var(--green);
 }
+
+/* BUTTONS & LINKS IN DETAIL  */
+/* BUTTONS */
+.btn-ext,
+.btn-int {
+  transition: opacity 200ms ease-in, border 200ms ease-in;
+  position: relative;
+  border: 0.04rem solid rgba(var(--shade), 0);
+}
+
+.btn-ext:hover,
+.btn-int:hover {
+  transition: opacity 200ms ease-in, border 200ms ease-in;
+  opacity: 1;
+}
+
+.btn-int:focus,
+.btn-int:hover {
+  border: 0.04rem solid var(--color);
+}
+
+.btn-ext:focus,
+.btn-ext:hover {
+  border: 0.5px solid rgba(var(--green), 1);
+}
+
+/* LINKS */
+.lnk-ext {
+  position: relative;
+  background: none;
+}
+
+p > a:hover,
+.lnk-ext:hover {
+  background: linear-gradient(
+    0deg,
+    transparent 14%,
+    rgba(var(--green), 0.44) 14%,
+    rgba(var(--green), 0.44) 20%,
+    transparent 20%
+  );
+}
+
+.lnk-ext:after {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+
+  content: "->";
+  position: absolute;
+  text-align: center;
+  font-weight: 300;
+  font-size: 0.88rem;
+  font-family: var(--font-button);
+  letter-spacing: -1ch;
+  text-indent: -0.6ch;
+  line-height: 1.4ch;
+
+  color: rgba(var(--color), 0.77);
+  background-color: rgba(var(--green), 0.55);
+  border-radius: 50%;
+  width: 0.66rem;
+  height: 0.66rem;
+  overflow: hidden;
+  transform: rotate(-44deg) translate(0rem, -0.15rem);
+  z-index: 20;
+
+  display: grid;
+  place-items: center;
+  place-content: center;
+
+  top: -0.3rem;
+  right: -0.3rem;
+}
+
+.lnk-ext:hover::after {
+  transition: opacity 0.3s ease;
+  opacity: 1;
+}
+
+/* PARAGRAPH LINKS  */
+small > a,
+p > a {
+  text-shadow: 0 0.05rem 0.2rem rgba(var(--green), 0.88);
+}
+
+/* END - BUTTONS & LINKS IN DETAIL  */
 
 ul {
   text-indent: 0;
@@ -412,7 +442,7 @@ img {
   position: relative;
 
   margin: 0;
-  padding: 1rem;
+  padding: 2rem 1rem;
 
   background-color: rgba(var(--shade), 0.22);
   /* border: 0.5px solid transparent; */
@@ -434,6 +464,8 @@ img {
 .works-card {
   width: 100%;
   height: 100%;
+  align-items: start;
+  align-content: space-between;
 }
 
 .works-card:hover {
@@ -460,7 +492,7 @@ img {
   position: absolute;
   z-index: -2;
   top: 0;
-  filter: blur(2px);
+  filter: blur(2px) grayscale(1);
   opacity: 0.2;
   transition: all ease-in 1s;
 }
@@ -711,8 +743,8 @@ img {
   width: 100vw;
   height: 100vh;
   object-fit: cover;
-  opacity: 0.55;
-  /* filter: grayscale(0.66) contrast(1.8); */
+  opacity: 0.33;
+  filter: contrast(0.8);
 }
 
 /* footer  */
@@ -755,20 +787,21 @@ footer {
   }
 
   .main-works {
-    position: absolute;
+    position: relative;
     top: -24.25vw;
-    gap: 0.2vmax;
+    gap: 1vmax;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     margin: 0;
-    padding: 0.2vmax;
+    padding: 1vmax;
+    width: calc(100% - 2vmax);
   }
 
   .works-card {
-    align-content: start;
-    padding: 8vw 2vw 2vw 2vw;
-    width: 48.5vw;
-    height: 48.5vw;
+    align-content: space-between;
+    padding: 6vw 2vw 6vw 2vw;
+    width: 47.5vw;
+    height: 47.5vw;
     font-size: 1rem;
     font-weight: 700;
   }
@@ -779,8 +812,13 @@ footer {
 
   .works-card h3 a {
     font-weight: 800;
-    letter-spacing: 0.1rem;
+    letter-spacing: normal;
     word-break: break-word;
+  }
+
+  h3 {
+    font-size: 1.6rem;
+    line-height: 1.85rem;
   }
 }
 
