--- a/docs/style.css
+++ b/docs/style.css
@@ -753,7 +753,7 @@ img {
 footer {
   position: fixed;
   z-index: 19;
-  bottom: 1rem;
+  bottom: 0.5rem;
   display: grid;
   justify-content: center;
   justify-items: center;
@@ -900,10 +900,10 @@ footer {
 
 #back-switch,
 #light-switch {
-  width: 1.44rem;
-  height: 1.44rem;
-  border-radius: 50%;
-  filter: drop-shadow(0px 2px 8px rgba(var(--color), 0.99));
+  /* width: 1.44rem;
+  height: 1.44rem; */
+  /* border-radius: 50%; */
+  /* filter: drop-shadow(0px 2px 8px rgba(var(--color), 0.99)); */
   cursor: pointer;
 }
 /* Back Switch */
@@ -918,12 +918,15 @@ footer {
 }
 
 .moon {
-  background-color: transparent;
-  box-shadow: inset -0.2rem -0.2rem 0 0.1rem rgba(var(--color), 1);
+  fill: var(--color);
+  /* box-shadow: inset -0.2rem -0.2rem 0 0.1rem rgba(var(--color), 1); */
 }
 
 .sun {
-  background-color: var(--color);
+}
+.sun,
+.moon {
+  fill: rgba(255, 255, 255, 0.5);
 }
 
 /* Background Images & Transitions */
