--- a/docs/style.css
+++ b/docs/style.css
@@ -12,8 +12,8 @@
   /* COLOURS - RE-CREATE */
 
   /* shadows */
-  --shadow-box1: 0px 2px 2px rgba(var(--shade), 0.66);
-  --shadow-box2: 4px 4px 6px rgba(var(--shade), 0.33);
+  --shadow-box1: 0px 2px 2px rgba(var(--color), 0.22);
+  --shadow-box2: 0px 4px 6px rgba(var(--color), 0.11);
 
   --shadow-box-button: 8px 8px 14px var(--dark), -8px 8px 14px var(--dark);
 
@@ -40,8 +40,14 @@
   --white: rgba(255, 255, 255, 0.88);
 
   /* transitions */
-
   --trans-btn: ease-in 200ms;
+  --trans-back: ease-in 400ms;
+
+  /* borders  */
+  --border: 0.2px solid rgba(var(--back-color), 0.99);
+  --border-hov: 0.2px solid rgba(var(--color), 0.44);
+  --panel-back: rgba(var(--shade), 0.44);
+  --panel-back-hov: rgba(var(--shade), 0.55);
 }
 
 body {
@@ -166,7 +172,7 @@ button {
   /* padding: 0.05rem .7rem 0.12rem .7rem; */
 
   border-radius: 50%;
-  border: 0.04rem solid rgba(var(--color), 1);
+  /* border: 0.04rem solid rgba(var(--color), 1); */
   border-radius: 50%;
   box-sizing: border-box;
   filter: drop-shadow(var(--dshadow-button-right))
@@ -197,18 +203,13 @@ button:active {
   transition: opacity var(--trans-btn), border var(--trans-btn),
     background-color var(--trans-btn);
   position: relative;
-  border: 0.04rem solid rgba(var(--color), 0);
+  border: var(--border);
 }
 
-.btn-ext:hover,
 .btn-int:hover {
   transition: opacity var(--trans-btn), border var(--trans-btn),
     background-color var(--trans-btn);
-}
-
-.btn-int:focus,
-.btn-int:hover {
-  border: 0.04rem solid rgba(var(--color), 0.44);
+  border: var(--border-hov);
   background-color: rgba(var(--color), 0.05);
 }
 
@@ -392,6 +393,7 @@ img {
   width: 100%;
   object-fit: cover;
   opacity: 0.33;
+  transition: var(--trans-back);
 }
 
 .background-image {
@@ -446,12 +448,9 @@ img {
   margin: 0;
   padding: 2rem 1rem;
 
-  background-color: rgba(var(--shade), 0.22);
-  /* border: 0.5px solid transparent; */
-  /* box-shadow: var(--shadow-box1); */
-  border: 0.4px solid rgba(var(--shade), 0.44);
-  /* cursor: pointer; */
-  backdrop-filter: blur(0px);
+  background-color: var(--panel-back);
+  border: var(--border);
+  backdrop-filter: blur(0);
   -webkit-backdrop-filter: blur(0rem);
 
   overflow: hidden;
@@ -472,13 +471,11 @@ img {
 
 .works-card:hover {
   z-index: 2;
-  backdrop-filter: blur(0.22rem);
+  backdrop-filter: blur(0.33rem);
   -webkit-backdrop-filter: blur(0.22rem);
-  opacity: 1;
-  background-color: rgba(var(--shade), 0.33);
+  /* opacity: 1; */
+  background-color: var(--panel-back-hov);
   box-shadow: var(--shadow-box2);
-  /* min-width: 100.5%;
-   min-height: 100.5%; */
   transform: scale(102%);
   transition: transform linear 222ms, background-color linear 222ms,
     backdrop-filter linear 222ms, opacity linear 222ms;
@@ -586,6 +583,10 @@ img {
 
 /* PAGE: ABOUT  */
 
+#page {
+  transition: var(--trans-back);
+}
+
 .about-works {
   margin: 9vmax 0 9vmax 0;
   grid-gap: 2vmax;
@@ -647,7 +648,7 @@ img {
   display: grid;
   width: 88%;
   grid-template-columns: minmax(12rem, 36rem);
-  grid-template-rows: minmax(12rem, 20rem);
+  /* grid-template-rows: minmax(12rem, 20rem); */
 
   grid-gap: 1rem;
 
@@ -659,18 +660,21 @@ img {
 }
 
 .read-card {
+  width: 100%;
+  height: 28rem;
   display: grid;
+  z-index: 1;
   align-content: center;
   grid-gap: 1rem;
-  /* min-width: 100%;
-   min-height: 100%; */
+
   text-align: center;
   box-sizing: border-box;
   position: relative;
-  padding: 1.8rem 1rem 1.2rem 1rem;
+  padding: 2rem 2rem 2rem 2rem;
   text-align: left;
 
-  background-color: rgba(var(--shade), 0.88);
+  background-color: var(--panel-back);
+  border: var(--border);
 
   box-shadow: var(--shadow-box1);
 
@@ -690,11 +694,17 @@ img {
   padding: 0;
 }
 
+.read-block {
+  padding: 2rem;
+  overflow: scroll;
+  box-shadow: inset 0 0.3rem 0.3rem rgba(0, 0, 0, 0.22);
+  background-color: rgba(var(--shade), 0.33);
+  border-radius: 0.4rem;
+}
 .read-block small,
 .read-block {
   margin: 0;
   text-indent: 1rem;
-  overflow: scroll;
 
   line-height: 1.28rem;
 }
@@ -853,19 +863,19 @@ footer {
 
 .sprites {
   position: fixed;
-  right: 1rem;
-  top: 1rem;
-
+  left: 1.2rem;
+  bottom: 0;
   display: grid;
+  grid-auto-flow: column;
+  place-content: center;
   width: auto;
-  height: max-content;
+  height: 4.6rem;
   gap: 0.4rem;
   padding: 0.1rem;
-
   z-index: 20;
 }
 
-.tooltip {
+/* .tooltip {
   font-family: var(--font-button);
   font-size: 0.6rem;
   text-align: left;
@@ -896,27 +906,25 @@ footer {
   transition: all 500ms ease-in-out;
 
   padding: 0 1.6rem 0 0.4rem;
-}
+} */
 
 #back-switch,
 #light-switch {
-  /* width: 1.44rem;
-  height: 1.44rem; */
-  /* border-radius: 50%; */
-  /* filter: drop-shadow(0px 2px 8px rgba(var(--color), 0.99)); */
-  cursor: pointer;
+  display: grid;
+  place-items: center;
+  width: 2.4rem;
+  height: 2.4rem;
 }
 /* Back Switch */
-#back-switch {
-  background: blue;
-}
 
 /* Light Switch */
 #light-switch {
-  display: block;
   position: relative;
 }
 
+.frame {
+  fill: none;
+}
 .moon {
   fill: var(--color);
   /* box-shadow: inset -0.2rem -0.2rem 0 0.1rem rgba(var(--color), 1); */
@@ -925,8 +933,9 @@ footer {
 .sun {
 }
 .sun,
-.moon {
-  fill: rgba(255, 255, 255, 0.5);
+.moon,
+.backswitch {
+  fill: rgba(255, 255, 255, 0.77);
 }
 
 /* Background Images & Transitions */
