--- a/components/read-thefool.html
+++ b/components/read-thefool.html
@@ -2,46 +2,20 @@
 <html lang="eng">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../docs/style.css" />
+  <!-- head for pages  -->
+  <script src="../components/head-tag-rest.js" type="text/javascript" defer></script>
+  <head-tag-rest></head-tag-rest>
+  <!-- end - head for pages -->
   <script defer src="../docs/script.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,500;1,200;1,300;1,500&display=swap"
-    rel="stylesheet" />
+  <script defer src="../components/header.js" type="text/javascript"></script>
 
-  <!-- Fonts - Google  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../style.css" />
 
-  <!-- favicon  -->
-  <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
-
-  <title>ali del vento</title>
 </head>
 
 <body>
-  <!-- HEADER  -->
-  <header class="header">
-    <div class="header-title">
-      <a href="../index.html">
-        <h2>ali del vento</h2>
-      </a>
-    </div>
-    <div class="header-line"></div>
-    <div class="header-subtitle">
-      <h6 class="header-subtitle-left">Private</h6>
-      <div class="header-sub-triangle"></div>
-      <h6 class="header-subtitle-right">Design</h6>
-    </div>
-  </header>
+  <header-component class="disappear"></header-component>
+
 
   <h1>The Fool</h1>
 
@@ -108,7 +82,7 @@
       </div>
     </div>
     <div class="only-card">
-      <a href="https://perlatarot.com" target="_blank" class="external">
+      <a href="https://alidelvento.art/thefool/" target="_blank" class="external">
         <button class="btn-ext" label="visit">Visit</button>
       </a>
     </div>
@@ -129,7 +103,7 @@
       <a href="../index.html">Main</a>
     </button>
     <button class="btn-int" label="contact">
-      <a href="/cont/contact.html">Contact</a>
+      <a href="./contact.html">Contact</a>
     </button>
   </footer>
 </body>
