--- a/style.css
+++ b/style.css
@@ -788,11 +788,12 @@ footer {
   z-index: 19;
   bottom: 0.5rem;
   display: grid;
+  justify-self: center;
   justify-content: center;
   justify-items: center;
   align-items: center;
   align-self: end;
-  width: fit-content;
+  width: 100%;
   height: auto;
   padding: 0.4rem 0 0.4rem 0;
   /* background: var(--whitest); */
