--- a/components/about.html
+++ b/components/about.html
@@ -6,8 +6,10 @@
   <script src="../components/head-tag-rest.js" type="text/javascript" defer></script>
   <head-tag-rest></head-tag-rest>
   <!-- end - head for pages -->
-  <script defer src="../docs/script.js"></script>
+  <script defer src="../script.js"></script>
   <script defer src="../components/header.js" type="text/javascript"></script>
+  <script defer src="../components/sprites.js" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -61,9 +63,8 @@
     </div>
   </section>
 
-  <section class="sprites">
+  <sprites-component class="disappear"></sprites-component>
 
-  </section>
 
   <footer>
     <a href="../index.html"><button class="btn-int" label="return">return</button></a>
