--- a/components/contact.html
+++ b/components/contact.html
@@ -6,8 +6,10 @@
   <script src="../components/head-tag-rest.js" type="text/javascript" defer></script>
   <head-tag-rest></head-tag-rest>
   <!-- end - head for pages -->
-  <script defer src="../docs/script.js"></script>
+  <script defer src="../script.js"></script>
   <script defer src="../components/header.js" type="text/javascript"></script>
+  <script defer src="components/sprites.js" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -43,9 +45,8 @@
     <div class="empty"></div>
   </section>
 
-  <section class="sprites">
-    <div id="light-switch"></div>
-  </section>
+  <sprites-component class="disappear"></sprites-component>
+
 
   <footer>
     <div>
