--- a/components/read-TEMPLATE.html
+++ b/components/read-TEMPLATE.html
@@ -6,8 +6,10 @@
    <script src="../components/head-tag-rest.js" type="text/javascript" defer></script>
    <head-tag-rest></head-tag-rest>
    <!-- end - head for pages -->
-   <script defer src="../docs/script.js"></script>
+   <script defer src="../script.js"></script>
    <script defer src="../components/header.js" type="text/javascript"></script>
+   <script defer src="components/sprites.js" type="text/javascript"></script>
+
 
    <link rel="stylesheet" href="../style.css" />
 
@@ -62,9 +64,8 @@
       <right class="right-column"></right>
    </section>
 
-   <section class="sprites">
+   <sprites-component class="disappear"></sprites-component>
 
-   </section>
 
    <footer>
       <button class="btn-int" label="main">
