--- a/components/read-artbyceylaninsel.html
+++ b/components/read-artbyceylaninsel.html
@@ -6,8 +6,10 @@
   <script src="../components/head-tag-rest.js" type="text/javascript" defer></script>
   <head-tag-rest></head-tag-rest>
   <!-- end - head for pages -->
-  <script defer src="../docs/script.js"></script>
+  <script defer src="../script.js"></script>
   <script defer src="../components/header.js" type="text/javascript"></script>
+  <script defer src="components/sprites.js" type="text/javascript"></script>
+
 </head>
 
 
@@ -87,9 +89,8 @@
     <right class="right-column"></right>
   </section>
 
-  <section class="sprites">
-    <div id="light-switch"></div>
-  </section>
+  <sprites-component class="disappear"></sprites-component>
+
 
   <footer>
     <button class="btn-int" label="main">
