--- a/components/read-coffeemolecule.html
+++ b/components/read-coffeemolecule.html
@@ -6,8 +6,10 @@
   <script src="../components/head-tag-rest.js" type="text/javascript" defer></script>
   <head-tag-rest></head-tag-rest>
   <!-- end - head for pages -->
-  <script defer src="../docs/script.js"></script>
+  <script defer src="../script.js"></script>
   <script defer src="../components/header.js" type="text/javascript"></script>
+  <script defer src="components/sprites.js" type="text/javascript"></script>
+
 
   <link rel="stylesheet" href="../style.css" />
 
@@ -52,6 +54,8 @@
     <middle class="mid-column"></middle>
     <right class="right-column"></right>
   </section>
+
+  <sprites-component class="disappear"></sprites-component>
 
   <footer>
     <button class="btn-int" label="main">
