Moderate Fixes and Improvements

--- a/components/contact.html
+++ b/components/contact.html
@@ -8,38 +8,27 @@
   <!-- end - head for pages -->
   <script defer src="../script.js"></script>
   <script defer src="../components/header.js" type="text/javascript"></script>
-  <script defer src="components/sprites.js" type="text/javascript"></script>
+  <script defer src="./sprites.js" type="text/javascript"></script>
 
 </head>
 
 <body>
-  <header class="header">
-    <div class="header-title">
-      <h2><a href="../index.html">ali del vento</a></h2>
-    </div>
-    <div class="header-line"></div>
-    <div class="header-subtitle">
-      <h6 class="header-subtitle-left">Personal</h6>
-      <div class="header-sub-triangle"></div>
-      <h6 class="header-subtitle-right">Portfolio</h6>
-    </div>
-  </header>
+  <!-- HEADER  -->
+  <header-component class="disappear"></header-component>
 
   <h1>Contact</h1>
 
-  <div class="background">
-    <img src="" alt="Background Picture" class="background-image" id="back-image" />
-  </div>
-  <section id="page" class="contact">
+  <bg-revealer-component class="disappear"></bg-revealer-component>
 
 
-    <div class="contact-info">
-      <a href="tel:+905453350911" target="_blank"><button class="btn-int" label="call">call</button> <span>+90 545 335
-          0911</span>
-      </a>
-      <a href="mailto: aligulerworks@gmail.com" target="_blank"><button class="btn-int" label="email">email</button>
-        <span>aligulerworks@gmail.com</span>
-      </a>
+  <section id="page-contact" class="page contact-info">
+
+    <a href="tel:+905453350911" target="_blank"><button class="btn-int" label="call">call</button> <span>+90 545 335
+        0911</span>
+    </a>
+    <a href="mailto: aligulerworks@gmail.com" target="_blank"><button class="btn-int" label="email">email</button>
+      <span>aligulerworks@gmail.com</span>
+    </a>
     </div>
 
     <div class="empty"></div>
