--- a/components/read-artbyceylaninsel.html
+++ b/components/read-artbyceylaninsel.html
@@ -8,8 +8,7 @@
   <!-- end - head for pages -->
   <script defer src="../script.js"></script>
   <script defer src="../components/header.js" type="text/javascript"></script>
-  <script defer src="components/sprites.js" type="text/javascript"></script>
-
+  <script defer src="./sprites.js" type="text/javascript"></script>
 </head>
 
 
@@ -17,16 +16,12 @@
   <!-- HEADER  -->
   <header-component class="disappear"></header-component>
 
-
   <h1>Art By Ceylan Insel</h1>
 
-  <div class="background">
-    <img src="" alt="Background Picture" class="background-image" id="back-image" />
-  </div>
+  <bg-revealer-component class="disappear"></bg-revealer-component>
 
   <!-- READ CARD(S)  -->
-
-  <section id="page" class="read-works">
+  <section id="page-read" class="page read-works">
     <div class="read-card">
       <div class="read-heading">
         <h2>Art By Ceylan Insel</h2>
