--- a/components/about.html
+++ b/components/about.html
@@ -9,26 +9,19 @@
   <script defer src="../script.js"></script>
   <script defer src="../components/header.js" type="text/javascript"></script>
   <script defer src="../components/sprites.js" type="text/javascript"></script>
-
 </head>
 
 <body>
-  <!-- GOOGLE TAG MANAGER BODY  -->
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MDTH6X7" height="0" width="0"
-      style="display: none; visibility: hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+
   <!-- HEADER  -->
-
   <header-component class="disappear"></header-component>
-  <h1>about</h1>
-  <div class="background">
-    <img src="" alt="Background Picture" class="background-image" id="back-image" />
-    <p class="photo-by">Photo: <span>Ali Del Vento</span></p>
-  </div>
-  <!-- CARDS  -->
 
-  <section id="page" class="about-works">
+  <h1>about</h1>
+
+  <bg-revealer-component class="disappear"></bg-revealer-component>
+
+  <!-- CARDS  -->
+  <section id="page-about" class="page about-works">
     <h2>design & music</h2>
 
     <div class="about-card">
