--- a/components/read-coffeemolecule.html
+++ b/components/read-coffeemolecule.html
@@ -8,24 +8,18 @@
   <!-- end - head for pages -->
   <script defer src="../script.js"></script>
   <script defer src="../components/header.js" type="text/javascript"></script>
-  <script defer src="components/sprites.js" type="text/javascript"></script>
-
-
-  <link rel="stylesheet" href="../style.css" />
-
+  <script defer src="./sprites.js" type="text/javascript"></script>
 </head>
 
 <body>
   <header-component class="disappear"></header-component>
 
-
   <h1>Coffee Molecule</h1>
 
-  <div class="background">
-    <img src="" alt="Background Picture" class="background-image" id="back-image" />
-  </div>
+  <bg-revealer-component class="disappear"></bg-revealer-component>
 
-  <section class="read-works">
+
+  <section id="page-read" class="page read-works">
     <div class="read-card">
       <div class="read-heading">
         <h2>coffeemolecule.com</h2>
