--- a/components/read-cryptocoffee.html
+++ b/components/read-cryptocoffee.html
@@ -8,27 +8,19 @@
   <!-- end - head for pages -->
   <script defer src="../script.js"></script>
   <script defer src="../components/header.js" type="text/javascript"></script>
-  <script defer src="components/sprites.js" type="text/javascript"></script>
-
-
-  <link rel="stylesheet" href="../style.css" />
-
+  <script defer src="./sprites.js" type="text/javascript"></script>
 </head>
 
 <body>
   <!-- HEADER  -->
   <header-component class="disappear"></header-component>
 
-
   <h1>Crypto Coffee</h1>
 
-  <div class="background">
-    <img src="" alt="Background Picture" class="background-image" id="back-image" />
-  </div>
+  <bg-revealer-component class="disappear"></bg-revealer-component>
 
   <!-- READ CARD(S)  -->
-
-  <section id="page" class="read-works">
+  <section id="page-read" class="page read-works">
     <div class="read-card">
       <div class="read-heading">
         <h2>Crypto Coffee</h2>
