--- a/components/read-artbyceylaninsel.html
+++ b/components/read-artbyceylaninsel.html
@@ -50,7 +50,7 @@
         <hr />
         <h4>About Ceylan Insel & the Website</h4>
         <p>
-          Ceylan İnsel is a graphic designer and illustrator. She has studied
+          Ceylan İnsel is an illustraton artis. She has studied
           business communication at Bentley College, Ma, USA. Then she has
           furthered her studies at Parsons School of design, New York
           graduating in graphic design. She then moved to Milan, Italy. Love
@@ -64,11 +64,6 @@
           of her artworks whom would like to obtain with <i>this</i> online
           store.
         </p>
-        <small>For the purpose of the website preparetion progress we decided to
-          go with the beautiful theme
-          <a class="external" href="https://northeme.com/theme/reframe-plus" rel="nofollow" target="_blank">Reframe
-            Plus</a>
-          by Northeme.</small>
       </div>
     </div>
     <div class="only-card">
