--- a/components/read-cryptocoffee.html
+++ b/components/read-cryptocoffee.html
@@ -28,12 +28,8 @@
       </div>
       <div class="read-block">
         <p>
-          This is a lorem ipsum content that'll be replaced with information.
-        </p>
-        <p>
-          Just because of continuous skill exercises and never-ending learning
-          progress (supposed to be, imho), running into garbled stuff,
-          unfinished or untidy content will be there most of the time.
+          A project website for the ones who would like to go in for an ecommerce business about selling coffee and
+          related stuff. Receiving payment with crypto currencies is also an option besides paying with credit card.
         </p>
 
         <small>
