--- a/components/read-memories.html
+++ b/components/read-memories.html
@@ -28,25 +28,15 @@
          </div>
          <div class="read-block">
             <p>
-               This is a lorem ipsum content that'll be replaced with information.
+               This website is a tribute for the loved ones that are passed away. People can either search in this
+               website or scan the QR code on the gravestone to reach the memories of their lost relative.
             </p>
-            <p><cite>
-                  "In my sleep, in the day
-                  In my life, in the way
-                  All the day, on the town
-                  In the bus, on the ground
-                  In the air, in the sea
-                  When I laugh, cry, try to eat
-                  There was you
-                  All I could see was you"
-               </cite> <i>by Angela McCluskey, Marcus Fuereder (Parov Stelar / Don't Believe What They Say / The Demon
-                  Diaries)</i></p>
          </div>
-      </div>
-      <div class="only-card">
-         <a href="https://alidelvento.art/memories/" target="_blank" class="external">
-            <button class="btn-ext" label="visit">Visit</button>
-         </a>
+         <div class="only-card">
+            <a href="https://alidelvento.art/memories/" target="_blank" class="external">
+               <button class="btn-ext" label="visit">Visit</button>
+            </a>
+         </div>
       </div>
    </section>
 
