--- a/components/read-sendmypost.html
+++ b/components/read-sendmypost.html
@@ -24,29 +24,19 @@
       page <div class="read-card">
          <div class="read-heading">
             <h2>Send My Post</h2>
-            <p>wordPress website | color palette | svg graphics | logo | css</p>
+            <p>wordPress website | color palette | svg graphics | logo | css design</p>
          </div>
          <div class="read-block">
             <p>
-               This is a lorem ipsum content that'll be replaced with information.
+               Need a solution for home, your office or your server? Avoid the hassle of queueing at the post office by
+               sending mail directly from your computer to anywhere.
             </p>
-            <p><cite>
-                  "In my sleep, in the day
-                  In my life, in the way
-                  All the day, on the town
-                  In the bus, on the ground
-                  In the air, in the sea
-                  When I laugh, cry, try to eat
-                  There was you
-                  All I could see was you"
-               </cite> <i>by Angela McCluskey, Marcus Fuereder (Parov Stelar / Don't Believe What They Say / The Demon
-                  Diaries)</i></p>
          </div>
-      </div>
-      <div class="only-card">
-         <a href="https://www.staging.sendmypost.co.uk/" target="_blank" class="external">
-            <button class="btn-ext" label="visit">Visit</button>
-         </a>
+         <div class="only-card">
+            <a href="https://www.staging.sendmypost.co.uk/" target="_blank" class="external">
+               <button class="btn-ext" label="visit">Visit</button>
+            </a>
+         </div>
       </div>
    </section>
 
