--- a/components/read-thefool.html
+++ b/components/read-thefool.html
@@ -25,7 +25,7 @@
       <div class="read-heading">
         <h2>The Fool</h2>
         <h3>Tarot Website</h3>
-        <p>website | color palette | identity | logotype | theme</p>
+        <p>website | theme creation | color palette | identity | logotype</p>
       </div>
       <div class="read-block">
         <ul>
