--- a/components/read-veryluckycraftshop.html
+++ b/components/read-veryluckycraftshop.html
@@ -25,29 +25,19 @@
       <div class="read-card">
          <div class="read-heading">
             <h2>Very Lucky Craft Shop</h2>
-            <p>wordPress website | color palette | identity | logo | ecommerce</p>
+            <p> website design | css animations | coloring | gsap animations</p>
          </div>
          <div class="read-block">
             <p>
-               This is a lorem ipsum content that'll be replaced with information.
+               A website being designed and developed for illustration artist Ceylan Insel.
             </p>
-            <p><cite>
-                  "In my sleep, in the day
-                  In my life, in the way
-                  All the day, on the town
-                  In the bus, on the ground
-                  In the air, in the sea
-                  When I laugh, cry, try to eat
-                  There was you
-                  All I could see was you"
-               </cite> <i>by Angela McCluskey, Marcus Fuereder (Parov Stelar / Don't Believe What They Say / The Demon
-                  Diaries)</i></p>
+
          </div>
-      </div>
-      <div class="only-card">
-         <a href="https://ceylaninsel.art/" target="_blank" class="external">
-            <button class="btn-ext" label="visit">Visit</button>
-         </a>
+         <div class="only-card">
+            <a href="https://ceylaninsel.art/" target="_blank" class="external">
+               <button class="btn-ext" label="visit">Visit</button>
+            </a>
+         </div>
       </div>
    </section>
 
