--- a/style.css
+++ b/style.css
@@ -689,7 +689,7 @@ img {
 
 .read-card {
   width: 100%;
-  height: 28rem;
+  height: fit-content;
   display: grid;
   z-index: 1;
   align-content: center;
@@ -713,7 +713,9 @@ img {
 }
 
 .only-card {
+  display: grid;
   align-self: center;
+  place-items: center;
 }
 
 .read-heading {
